Try to fix bug in displaying colors. Change overflow to scroll

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,6 +65,7 @@ select {
   background-color:  rgba(209, 206, 190, 1);
   height: 580px;
   padding-left: 30px;
+  overflow: scroll;
   width: 21%;
 }
 
